# container-ship-stowage-optimizer

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run_app.ps1  run_tests.ps1
.github/workflows/: ci.yml
app/: app_helpers.py  learning_content.py  main.py
data/examples/: containers_20.csv  containers_40.csv  containers_60.csv  containers_80.csv
docs/: ACADEMIC_EXPLANATION.md  ALGORITHMS.md  BENCHMARKS.md  DEPLOYMENT.md  DESIGN.md  FUTURE_US_NOTES.md  METRICS_AND_CONSTRAINTS.md  USER_GUIDE.md
src/stowage_optimizer/: __init__.py
src/stowage_optimizer/benchmarks/: __init__.py  runner.py  scenarios.py
src/stowage_optimizer/core/: __init__.py  container.py  examples.py  metrics.py  problem.py  route.py  ship.py  solution.py  validation.py
src/stowage_optimizer/solvers/: __init__.py  base.py  genetic.py  greedy.py  local_search.py  milp.py
src/stowage_optimizer/viz/: __init__.py  diagnostics.py  plot3d.py
tests/: test_app_helpers.py  test_benchmark_runner.py  test_benchmark_scenarios.py  test_container.py  test_diagnostics_viz.py  test_genetic.py  test_greedy.py  test_learning_content.py  test_local_search.py  test_metrics.py  test_milp.py  test_plot3d.py  test_route.py  test_ship.py  test_solution.py  test_validation.py
