[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "container-ship-stowage-optimizer"
version = "0.1.0"
description = "Academic container ship stowage optimization project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulp>=2.7",
    "streamlit>=1.30",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``app`` is on the path so the Streamlit-free helpers in ``app/app_helpers.py``
# can be imported and unit-tested without launching Streamlit.
pythonpath = ["src", "app"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stowage_optimizer*"]
