[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "container-ship-stowage-optimizer"
version = "0.1.0"
description = "Academic container ship stowage optimization project."
readme = "README.md"
requires-python = ">=3.11"
# Keep in sync with requirements.txt, which Streamlit Cloud installs from.
dependencies = [
    "pulp>=3,<4",
    "streamlit>=1.30",
    "pandas>=2.0",
    "plotly>=5.20",
]

[project.scripts]
stowage-benchmark = "stowage_optimizer.benchmarks.runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``app`` is on the path so the Streamlit-free helpers in ``app/app_helpers.py``
# can be imported and unit-tested without launching Streamlit.
pythonpath = ["src", "app"]
# PuLP 3.x emits these two PuLP 4.0 migration notices on every variable and
# solver call, flooding the test output. The ``pulp>=3,<4`` pin keeps the 3.x
# API valid; drop these filters when migrating to PuLP 4 (see
# docs/FUTURE_US_NOTES.md).
filterwarnings = [
    "ignore:Constructing LpVariable:DeprecationWarning",
    "ignore:PULP_CBC_CMD is deprecated:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["stowage_optimizer", "app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "app"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stowage_optimizer*"]
